--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,15 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 body {
+    width: 100%;
     height: 100%;
     background-color: #67abef;
 }
 header {
     text-align: center;
-    background-color: inherit;
+    background-color: #67abef;
     padding: 10px;
     height: 80%;
 
@@ -26,9 +31,10 @@ header {
 }
 
 main {
-    background-color: inherit;
+    background-color: #67abef;
     height: 80%;
     text-align: center;
+    padding: 10px;
 
 
     display: -ms-flexbox;
@@ -37,15 +43,11 @@ main {
     display: -webkit-flex;
     display: flex;
 
-    -ms-flex-pack: space-between;
-    -moz-box-pack: space-between;
-    -webkit-box-pack: space-between;
-    -webkit-justify-content: space-between;
-    justify-content: space-between;
-
-   -ms-flex-wrap: wrap;
-   -webkit-flex-wrap: wrap;
-   flex-wrap: wrap;
+    -ms-flex-pack: center;
+    -moz-box-pack: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
 
    -moz-box-orient: vertical;
    -webkit-box-orient: vertical;
@@ -112,17 +114,26 @@ li {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+
+    align-self: center;
+
+    -ms-flex-positive: 1;
+    -moz-box-flex: 1;
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+    flex-grow: 1;
+
+    padding: 0;
  }
 
  .container {
     width: 400px;
-    margin: auto;
-    margin-bottom: 2%;
+    margin: 2% 30% 5% 30%;
     text-align: center;
 
-    -ms-flex-preferred-size: 48%;
-    -webkit-flex-basis: 48%;
-    flex-basis: 30%;
+    -ms-flex-preferred-size: 70%;
+    -webkit-flex-basis: 70%;
+    flex-basis: 70%;
  }
 
  #input {
@@ -162,8 +173,7 @@ li {
     min-width: 191px;
     min-height: 120px;
     background-color: #1159a2;
-    margin: auto;
-    margin-top: 2%;
+    margin: 0% 30% 5% 30%;
     font-family: Source Sans Pro;
     font-weight: 400;
     font-size: 14px;
@@ -171,7 +181,6 @@ li {
     text-align: center;
     color: #ffffff;
     overflow-wrap: break-word;
-    padding: 20px;
 
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
